# PriceTrend_Engineer

./: .gitignore  .replit  README.md  app.py  pyproject.toml  replit.md
config/: settings.py
models/: ml_predictor.py
services/: data_service.py  government_schemes.py  openai_service.py
utils/: data_processor.py
